# many-mind-kernel

./: .gitignore  launch-falcon.ps1  launch-progeny.sh  launch-qdrant.ps1  launch-voiceTTS.ps1  pyproject.toml  restartVoice.ps1
docs/: AGI_REQUIREMENTS.md  ATTRACTOR_FLOW_DYNAMICS.md  KO46_DYNAMIC_ROPE_TEMPORAL_FOCUS.md  OZ_SESSION_HANDOFF.md  SPIRAL_DIFFUSION_DESIGN.md  The_Many_Mind_Kernel_Living_Doc.md
docs/dll-strings/: AIAgent.strings.paths.txt  AIAgent.strings.txt
falcon/api/: routes.py  server.py
falcon/src/: event_parsers.py  progeny_protocol.py  tick_accumulator.py  tts.py
progeny/api/: routes.py  server.py
progeny/src/: acquaintance.py  disclosure.py  emotional_delta.py  event_accumulator.py  goal_lifecycle.py  goal_pool.py  goal_priming.py  harmonic_buffer.py  identity_kernel.py  llm_client.py  memory_compressor.py  memory_reconsolidation.py  memory_retrieval.py  memory_writer.py  prompt_formatter.py  qdrant_client.py  response_expander.py  social_goals.py  valence.py
progeny/tests/: test_acquaintance.py  test_disclosure.py  test_goal_lifecycle.py  test_goal_priming.py  (+5 more)
scripts/: dump_aiagent_strings.ps1  import_seed_data.py  test_ws_roundtrip.py  verify_speech_event.py
shared/: config.py  constants.py  schemas.py
tests/: test_embedding.py  test_emotional_delta.py  test_emotional_projection.py  test_event_accumulator.py  test_harmonic_buffer.py  test_ingest_integration.py  test_memory_compressor.py  test_prompt_formatter.py  test_qdrant_wrapper.py  test_speech_pipeline.py  test_tier_modulator_integration.py  test_uncertainty.py
